SAMZA-544; move TestSamzaContainerPerformance to an integration test